<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Point-Of-Sale</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_login">LOGIN</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="skip_to_scan">Skip to Scan</string>
    <string name="button_scan">SCAN</string>
    <string name="text_scan_test">Testing the Scanning feature</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_fakelogin">FakeloginActivity</string>
    <string name="title_activity_offline_login">OfflineLogin</string>
    <string name="title_activity_poscontrol">POSControl</string>
    <string name="user_id">User ID</string>
    <string name="user_pin">User PIN</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="admin_user_id">Admin ID</string>
    <string name="admin_user_pin">Admin PIN</string>
    <string name="app_version">version 1.0</string>
    <string name="title_activity_fake_add_item">FakeAddItem</string>
    <string name="title_activity_fake_cart">FakeCartActivity</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="title_activity_pay_anywhere_test">PayAnywhereTestActivity</string>
    <string name="charge_amt">Charge Amount</string>
    <string name="charge_button">Charge</string>
    <string name="invoice_et">Invoice #</string>
    <string name="action_poll">Sync Off</string>
    <string name="action_scan">Scan</string>
    <string name="title_activity_user_admin">UserAdminActivity</string>
    <string name="title_activity_add_cart_item">AddCartItemActivity</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="title_activity_manual_pay">ManualPayActivity</string>
    <string name="title_activity_swipe">SwipeActivity</string>

</resources>
