<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PayAnywhereTestActivity" >

    <Button
        android:id="@+id/charge_amt_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/charge_amt_et"
        android:layout_alignBottom="@+id/charge_amt_et"
        android:layout_alignParentRight="true"
        android:text="@string/charge_button" />

    <EditText
        android:id="@+id/charge_amt_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/charge_amt"
        android:inputType="numberDecimal"
        android:text="@string/charge_amt" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/invoice_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/charge_amt_et"
        android:layout_below="@+id/charge_amt_b"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/invoice_et"
        android:text="@string/invoice_et" />

</RelativeLayout>