<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >
    
    <!-- Progress -->

    <LinearLayout
        android:id="@+id/login_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/flogin_spinner_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="Loading"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->
<RelativeLayout 
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextUserID"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:text="@string/user_id"
        android:textStyle="bold"
        android:textColor="#58ACFA"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="text"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextUserID"
        android:layout_below="@+id/editTextUserID"
        android:layout_marginTop="26dp"
        android:text="@string/user_pin"
        android:textStyle="bold"
        android:textColor="#58ACFA"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/b_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#669900"
        android:onClick="login"
        android:text="@string/button_login" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#000000"
        android:textColor="#424242"
        android:text="@string/app_version" 
        android:onClick="offline_login"/>

    <EditText
        android:id="@+id/editTextUserPIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/editTextUserID"
        android:layout_below="@+id/textView2"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:hint="@string/user_id"
        android:ems="10"
        android:inputType="numberPassword" />



</RelativeLayout>

</merge>
